--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,33 @@
-ul li {
-  list-style-type: upper-roman;
+.app-wrapper {
+    margin: 0 auto;
+    display: grid;
+    width: 1400px;
+    grid-template-rows: 60px 1fr;
+    grid-template-columns: 2fr 10fr;
+    grid-template-areas:
+    "h h"
+    "n c";
+    /*grid-gap: 10px;*/
+}
+
+.header {
+    grid-area: h;
+    background-color: aquamarine;
+}
+
+.nav {
+    grid-area: n;
+    background-color: cadetblue;
+
+}
+
+.content {
+    grid-area: c;
+    background-color: chocolate;
+}
+
+
+.header img {
+    width: 30px;
+    height: 30px;
 }
